--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Find out what flights are currently above your location" />
+    <meta property="og:title" content="What's Above Me?" />
+    <meta
+      property="og:description"
+      content="Discover the flights currently flying over your location" />
+    <meta property="og:type" content="website" />
     <title>What's Above Me</title>
     <style>
       html,
@@ -25,7 +33,7 @@
         overflow-y: auto;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start; /* Changed from center to flex-start */
         padding: 20px;
         box-sizing: border-box;
       }
@@ -39,6 +47,8 @@
         max-height: 80vh;
         width: 100%;
         max-width: 600px;
+        display: flex;
+        flex-direction: column;
       }
       h1 {
         color: #3c3d37;
@@ -64,10 +74,77 @@
         text-decoration: underline;
       }
       #flightList {
-        text-align: center;
-        padding: 0 20px;
-        max-height: calc(80vh - 100px); /* Adjust based on your title height */
         overflow-y: auto;
+        max-height: calc(
+          80vh - 150px
+        ); /* Adjust based on your title and button height */
+        padding: 0 20px;
+      }
+      .loader {
+        border: 5px solid #f3f3f3;
+        border-top: 5px solid #3498db;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        animation: spin 1s linear infinite;
+        margin: 20px auto;
+      }
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      #content {
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        text-align: center;
+        z-index: 10;
+        max-height: 80vh;
+        width: 100%;
+        max-width: 600px;
+        display: flex;
+        flex-direction: column;
+      }
+
+      #flightList {
+        overflow-y: auto;
+        max-height: calc(
+          80vh - 150px
+        ); /* Adjust based on your title and button height */
+        padding: 0 20px;
+      }
+
+      #refreshButton {
+        background-color: #4a6491;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
+        align-self: center; /* Center the button within the flex container */
+      }
+
+      #refreshButton:hover {
+        background-color: #3c5279;
+      }
+
+      #refreshButton:active {
+        background-color: #2e4060;
+        transform: translateY(1px);
+      }
+
+      #refreshButton:focus {
+        outline: none;
+        box-shadow: 0 0 0 3px rgba(74, 100, 145, 0.3);
       }
     </style>
   </head>
@@ -75,14 +152,19 @@
     <div class="scroll-container">
       <div id="content">
         <h1>What's Above Me?</h1>
-        <div id="flightList">
-          <p>Loading your location...</p>
-        </div>
+        <button id="refreshButton" onclick="getLocation()">Refresh Data</button>
+
+        <div id="flightList"></div>
       </div>
     </div>
 
     <script>
       const flightListElement = document.getElementById('flightList');
+
+      function showLoading() {
+        flightListElement.innerHTML =
+          '<div class="loader"></div><p>Loading data...</p>';
+      }
 
       function getLocation() {
         if (navigator.geolocation) {
@@ -97,7 +179,7 @@
         const latitude = position.coords.latitude;
         const longitude = position.coords.longitude;
 
-        flightListElement.innerHTML = '<p>Loading data...</p>';
+        showLoading();
 
         fetch(`/get_flights?lat=${latitude}&lon=${longitude}`)
           .then((response) => {
