removed loading message

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -163,7 +163,7 @@
 
       function showLoading() {
         flightListElement.innerHTML =
-          '<div class="loader"></div><p>Loading data...</p>';
+          '<div class="loader"></div>';
       }
 
       function getLocation() {
